--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,11 +1,3 @@
-@media(max-width: 1920px) {
-  .container__header {
-    max-width: 1626px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-}
-
 @media(max-width: 1600px) {
   .menu.active {
     width: 735px;
@@ -21,22 +13,13 @@
 
   .spec__item {
     height: 500px;
-
-    &:hover {
-      .spec__item-title {
-        font-size: 24px;
-        line-height: 26px;
-      }
-    }
   }
 
   .spec__item-title,
-  .projects__item-title {
-    padding: 30px 15px 0 30px
-  }
-
+  .projects__item-title,
   .projects__text-more {
-    padding: 30px 30px 0 30px;
+    margin-top: 30px;
+    margin-left: 30px;
   }
 
   .projects__item {
@@ -115,6 +98,12 @@
     line-height: 17px;
   }
 
+  .global__btn-mail {
+    font-size: 14px;
+    line-height: 17px;
+    padding: 8px 12px;
+  }
+
   .menu.active {
     width: 520px;
     font-size: 14px;
@@ -173,14 +162,6 @@
 
   .spec__item {
     height: 600px;
-
-    &:hover {
-      .spec__item-title {
-        font-size: 32px;
-        line-height: 38px;
-        max-width: 375px;
-      }
-    }
   }
 
   .projects__wrapper-item {
@@ -268,6 +249,11 @@
 
 
 @media(max-width: 768px) {
+  .text {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
   .screen__box {
     margin-left: 0;
   }
@@ -287,8 +273,7 @@
     &:hover {
       .spec__item-title {
         font-size: 24px;
-        line-height: 30px;
-        max-width: 320px;
+        line-height: 26px;
       }
     }
   }
@@ -312,7 +297,7 @@
     &:hover {
       .projects__item-title {
         font-size: 24px;
-        line-height: 30px;
+        line-height: 26px;
       }
     }
   }
@@ -365,7 +350,6 @@
 @media(max-width: 600px) {
   .menu.active {
     width: 100%;
-    padding-top: 95px;
     padding-left: 15px;
   }
 
@@ -444,17 +428,6 @@
     margin-bottom: 30px;
   }
 
-  .header__btn {
-    &+.header__btn {
-      margin-left: 20px;
-    }
-  }
-
-  .menu.active {
-    padding-top: 50px;
-    overflow-y: scroll;
-  }
-
   .menu__mobil-list {
     margin-bottom: 25px;
   }
@@ -500,9 +473,10 @@
   .reviews__slider {
     padding: 2px 15px;
   }
-    .footer__btn-wrapper {
-      display: block;
-    }
+
+  .footer__btn-wrapper {
+    display: block;
+  }
 
 }
 
@@ -527,7 +501,7 @@
 
   .header__btn {
     display: block;
-    margin-bottom: 35px;
+    // margin-bottom: 35px;
 
     &+.header__btn {
       margin-left: 0;
