--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -259,21 +259,15 @@ body {
   display: none;
   position: absolute;
   z-index: 10;
-
   &.active {
     display: block;
     position: absolute;
-    // top: 104px;
     top: 0px;
     right: 0;
     bottom: 0;
-    // width: 690px;
     width: 880px;
-    // height: 947px;
     height: 100vh;
-    padding-left: 50px;
-    // padding-top: 132px;
-    padding-top: 43px;
+    padding: 50px 0 50px 50px;
     font-size: 18px;
     line-height: 22px;
     background: rgba(1, 23, 32, 0.7);
@@ -282,11 +276,22 @@ body {
 }
 
 .menu-mobil {
-  margin-bottom: 50px;
+  height: fit-content;
 }
-
+.menu__mobil-btn{
+  margin-bottom: 30px;
+}
+.menu__wrapper {
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+  height: 100% ;
+}
+.menu__mobil-box{
+  margin-bottom: 25px;
+}
 .menu-mobil-services {
-  margin: 50px 0 50px 20px;
+  margin: 50px 0 50px 15px;
 }
 
 .menu__mobil-list {
