--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -15,8 +15,7 @@
   }
 
   .spec__item-title,
-  .projects__item-title,
-  .projects__text-more {
+  .projects__item-title {
     margin-top: 30px;
     margin-left: 30px;
   }
