--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -397,20 +397,24 @@
     margin-left: 0;
     margin-right: auto;
   }
-   .footer__social {
-     max-width: 435px;
-     width: 100%;
-   }
+
+  .footer__social {
+    max-width: 435px;
+    width: 100%;
+  }
+
   .footer__item-requisites {
     width: 470px;
     order: 1;
   }
-  .footer__down{
+
+  .footer__down {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
   }
-  .footer__down-copyright{
+
+  .footer__down-copyright {
     max-width: 470px;
     width: 100%;
   }
@@ -505,11 +509,13 @@
 }
 
 @media(max-width: 550px) {
+
   .footer__inner,
   .footer__down {
     justify-content: flex-start;
   }
 }
+
 @media(max-width: 500px) {
 
   .header__phone {
@@ -533,13 +539,21 @@
     letter-spacing: 0;
   }
 
+  .global__social {
+    height: 120px;
+  }
+
   .global__social-list {
     margin-right: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 
     &+.global__social-list {
       margin-left: 0px;
     }
+  }
+
+  .global__social-list--link.global-btn {
+    margin: 0;
   }
 
   .global__social-list--link {
@@ -588,12 +602,21 @@
     padding: 2px 15px;
   }
 
+  .footer__item {
+    margin-bottom: 20px;
+  }
+
   .footer__btn-wrapper {
     display: block;
   }
+
   .footer__item-contacts,
   .menu__mobil-box {
     width: 300px;
+  }
+
+  .footer__item-contacts {
+    margin-bottom: 0;
   }
 }
 
