fix btn in section feedback, fix link in section footer

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -578,16 +578,16 @@
     display: none;
   }
 
-  .feedback__inners-btn {
-    flex-wrap: wrap;
-  }
+  // .feedback__inners-btn {
+  //   flex-wrap: wrap;
+  // }
 
-  .feedback__file__wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-  }
+  // .feedback__file__wrapper {
+  //   width: 100%;
+  //   display: flex;
+  //   justify-content: center;
+  //   margin-bottom: 30px;
+  // }
 
   .feedback__btn {
     margin-left: 0;
