--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -171,7 +171,15 @@
   max-width: 1024px;
   width: 100%;
 }
-
+// старт для страницы строительство
+.spec__text-more {
+  margin-left: 50px;
+  padding-right: 50px;
+  max-width: 380px;
+  transition: all 1s;
+  opacity: 1;
+}
+// финиш для страницы строительство
 .spec__item {
   max-width: 480px;
   width: 100%;
@@ -204,6 +212,10 @@
       opacity: 1;
       font-size: 14px;
       line-height: 16px;
+    }
+    .spec__text-more{
+      opacity: 0;
+      margin-top: 20px;
     }
   }
 }
@@ -446,7 +458,8 @@
 }
 
 .reviews__info {
-  padding-right: 50px;
+  padding-right: 30px;
+
 }
 
 .reviews__info-title {
@@ -455,7 +468,7 @@
 }
 
 .reviews__info-img {
-  margin-right: 40px;
+  margin-right: 30px;
   width: 74px;
   height: 75px;
 }
@@ -479,8 +492,8 @@
 }
 
 .reviews__info__wrapper {
-  padding-left: 115px;
-  width: 467px;
+  padding-left: 105px;
+  width: 527px;
 }
 
 .reviews__info-text {
@@ -502,9 +515,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 577px;
+  max-width: 540px;
   width: 100%;
-  height: 350px;
+  height: 328px;
   border-radius: 10px;
 }
 
@@ -683,7 +696,7 @@
   }
 }
 
-.lapli {
+.lapki {
   max-width: 273px;
   width: 100%;
   padding-top: 20px;
@@ -698,16 +711,6 @@
     border-bottom: 1px solid $neon-blue;
   }
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
