--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -569,7 +569,8 @@
     margin-bottom: 30px;
   }
 
-  .benefits__subtitle {
+  .benefits__subtitle,
+  .stages__item-title {
     font-size: 18px;
     line-height: 20px;
     margin-bottom: 15px;
