--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -238,7 +238,9 @@
   padding: 0 15px;
   margin-bottom: 100px;
 }
-
+.devbenefits__item{
+  width: 540px;
+}
 .benefits__subtitle {
   @extend %Forum-Regular;
   color: $neon-blue;
@@ -716,7 +718,25 @@
 
 // end section footer
 
+// start section stages
+.stages__inner{
+  max-width: 1285px;
+  margin: 0 auto;
+}
+.stages__item{
+  margin-bottom: 50px;
+}
+.stages__item-title{
+    @extend %Forum-Regular;
+    color: $neon-blue;
+    font-size: 24px;
+    line-height: 26px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
 
+// end section stages
 
 
 
