add str design + adaptive

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -386,6 +386,7 @@ body {
   padding-right: 18px;
   margin-right: 3px;
   font-size: 14px;
+  text-transform: uppercase;
   position: relative;
   &::after {
     position: absolute;
