--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -104,6 +104,11 @@
     display: flex;
     justify-content: center;
   }
+
+  .work__img {
+    width: 435px;
+    height: 355px;
+  }
 }
 
 @media(max-width: 1024px) {
@@ -232,6 +237,20 @@
   .footer__item-contacts {
     width: 825px;
   }
+
+  .devscreen {
+    height: 750px;
+  }
+  .work__box{
+    margin-top: 30px;
+    padding: 0 50px;
+    max-width: 550px;
+  }
+  .work__img{
+    max-width: 328px;
+    height: 265px;
+  }
+
 }
 
 @media(max-width: 850px) {
@@ -246,6 +265,9 @@
     padding: 15px 0;
   }
 
+  .devscreen__box{
+    margin-top: 100px;
+  }
   .menu {
     &.active {
       padding: 35px 0 35px 35px;
@@ -270,6 +292,11 @@
 
   .footer__item-contacts {
     margin-bottom: 0;
+  }
+  .work__box {
+  
+    padding: 0 30px;
+    max-width: 400px;
   }
 }
 
@@ -297,17 +324,16 @@
     font-size: 16px;
     line-height: 20px;
   }
-  
+
   .screen__box {
     margin-left: 0;
   }
-  .devscreen{
-    height: 750px;
-  }
+
   .devscreen__box,
   .devscreen__title {
     width: 100%;
   }
+
   .company__inner {
     flex-wrap: wrap;
   }
@@ -475,6 +501,13 @@
     padding-left: 15px;
   }
 
+  .screen__title,
+  .devscreen__title {
+    font-size: 36px;
+    line-height: 40px;
+
+  }
+
   .spec__wrapper-item {
     flex-wrap: wrap;
   }
@@ -512,7 +545,19 @@
   .feedback__item-text {
     width: 100%;
   }
-
+  .work__item-left,
+  .work__item-right {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 0;
+  }
+  .work__box{
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+  .work__box-left{
+    order: -1;
+  }
 }
 
 @media(max-width: 550px) {
@@ -533,12 +578,7 @@
     margin-top: 150px;
   }
 
-  .screen__title,
-  .devscreen__title {
-    font-size: 36px;
-    line-height: 40px;
 
-  }
 
   .screen__subtitle,
   .devscreen__subtitle {
@@ -644,13 +684,20 @@
   .menu__mobil-box {
     height: 285px;
   }
-  
+
 }
 
 // ВЕРТИКАЛЬ ВВЕРХ!!!
+@media(max-width: 450px) {
+ .devscreen__title {
+   font-size: 28px;
+   line-height: 36px;
+   margin-bottom: 30px;
+ }
+}
 @media(max-width: 380px) {
-  .screen__title,
-  .devscreen__title {
+
+  .screen__title {
     font-size: 28px;
     line-height: 36px;
     margin-bottom: 30px;
