--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -171,6 +171,7 @@
   max-width: 1024px;
   width: 100%;
 }
+
 // старт для страницы строительство
 .spec__text-more {
   margin-left: 50px;
@@ -179,6 +180,7 @@
   transition: all 1s;
   opacity: 1;
 }
+
 // финиш для страницы строительство
 .spec__item {
   max-width: 480px;
@@ -213,7 +215,8 @@
       font-size: 14px;
       line-height: 16px;
     }
-    .spec__text-more{
+
+    .spec__text-more {
       opacity: 0;
       margin-top: 20px;
     }
@@ -238,9 +241,11 @@
   padding: 0 15px;
   margin-bottom: 100px;
 }
-.devbenefits__item{
+
+.devbenefits__item {
   width: 540px;
 }
+
 .benefits__subtitle {
   @extend %Forum-Regular;
   color: $neon-blue;
@@ -719,26 +724,84 @@
 // end section footer
 
 // start section stages
-.stages__inner{
+.stages__inner {
   max-width: 1285px;
   margin: 0 auto;
 }
-.stages__item{
+
+.stages__item {
   margin-bottom: 50px;
 }
-.stages__item-title{
-    @extend %Forum-Regular;
-    color: $neon-blue;
-    font-size: 24px;
-    line-height: 26px;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+
+.stages__item-title {
+  @extend %Forum-Regular;
+  color: $neon-blue;
+  font-size: 24px;
+  line-height: 26px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 // end section stages
 
+// start section work
+.work {
+  max-width: 1920px;
+  margin: 0 auto;
+}
 
+.work__item-left {
+  display: flex;
+  justify-content: flex-start;
+  margin-right: auto;
+  padding: 25px 0;
+}
+
+.work__item-right {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: auto;
+  padding: 25px 0;
+}
+
+.work__img {
+  max-width: 627px;
+  width: 100%;
+  height: 510px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+.work__box {
+  max-width: 670px;
+  width: 100%;
+  padding: 0 90px;
+  margin-top: 60px;
+}
+
+.work__subtitle {
+  @extend %Forum-Regular;
+  color: #00E0FF;
+  font-size: 24px;
+  line-height: 26px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.work__line {
+  background-color: $blue;
+  height: 1px;
+  max-width: 630px;
+  margin: 0 auto;
+}
+.work__btn{
+  margin-top: 25px;
+}
+// end section work
 
 
 
