add str repair + adaptive

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -610,7 +610,8 @@
   }
 
   .benefits__subtitle,
-  .stages__item-title {
+  .stages__item-title,
+  .work__subtitle {
     font-size: 18px;
     line-height: 20px;
     margin-bottom: 15px;
