add str gallery + adaptive

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -441,7 +441,8 @@ body {
   margin-top: 130px;
 }
 
-.devscreen__title {
+.devscreen__title,
+.start__title {
   text-transform: uppercase;
   font-size: 48px;
   line-height: 50px;
