--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -803,7 +803,17 @@
 }
 // end section work
 
+// start section start
+.start__box{
+  margin-top: 60px;
+}
+.start__wrapper{
+  text-align: center;
+}
 
+
+
+// end section start
 
 
 
